--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "node": "7.4.0"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "npm run build && node server.js",
     "dev": "npm run watch-scss & webpack-dev-server &",
     "watch-scss": "mkdir -p src/css && sass --watch src/scss:src/css",
     "copy": "cp -ruv ./src/css ./build && cp -uv ./src/index.html ./build",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel src/js -d src/lib"
+    "build": "npm run copy && node_modules/.bin/webpack"
   },
   "repository": {
     "type": "git",
