--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "7.4.0"
   },
   "scripts": {
-    "start": "npm run build && node server.js",
+    "start": "node server.js",
     "dev": "npm run watch-scss & webpack-dev-server &",
     "watch-scss": "mkdir -p src/css && sass --watch src/scss:src/css",
     "copy": "cp -ruv ./src/css ./build && cp -uv ./src/index.html ./build",
